dts/testData/inspections/nodeContentOrder/AfterDeleteNode.dtsi
prop = "value";

/delete-node/ name;

<error descr="Properties should be defined before nodes">prop</error> = "value";